--- a/5-diffusion.tex
+++ b/5-diffusion.tex
@@ -8,7 +8,7 @@
 \vspace*{-1\baselineskip}
 
 
-In separation processes, diffusion can either be the main performance metric or a secondary parameter that is often overlooked. Two distinct use cases for nanoporous materials in separation processes exist: adsorption-based separation, which is primarily a thermodynamic process, and nanoporous separation membranes, which rely on kinetic properties. In membrane-based processes, gases are sieved through a membrane material that selectively blocks certain molecules (e.g., Xe) while allowing others (e.g.) to diffuse freely. The performance of the separation is evaluated based on the ratio of diffusion coefficients, rather than the thermodynamic selectivity defined in Chapter 2. However, the thermodynamic selectivity remains the primary performance metric in industrially performed adsorption-based separation processes, such as pressure and/or temperature swing adsorption (PSA, TSA or PTSA). Nevertheless, considering the kinetic performance can enhance the overall industrial process.\autocite{Kumar_1994} For instance, in breakthrough experiments (a lab equivalent of a pressure swing adsorption) used to characterize the comparative adsorption performances of a gas mixture, the shape of the curve can be explained by diffusion processes. The aim of this chapter is to explore this frequently overlooked diffusion parameter in an adsorption-based Xe/Kr separation process.
+In separation processes, transport properties govern the kinetics of the adsorption process. Two distinct use cases for nanoporous materials in separation processes exist: adsorption-based separation, which is primarily a thermodynamic process, and nanoporous separation membranes, which rely on kinetic properties. Depending on the application, diffusion is either the main performance metric or a secondary parameter that is often overlooked. In membrane-based processes, for instance, gases are sieved through a membrane material that selectively blocks certain molecules (e.g., Xe) while allowing other particles to diffuse freely. The performance of the separation is measured through the ratio of diffusion coefficients, rather than the thermodynamic selectivity defined in Chapter 2. However, the thermodynamic selectivity remains the primary performance metric in industrially performed adsorption-based separation processes investigated in my work, such as pressure and/or temperature swing adsorption (PSA, TSA or PTSA). Nevertheless, considering the kinetic performance can enhance the overall industrial process.\autocite{Kumar_1994} For instance, in breakthrough experiments (a lab equivalent of a pressure swing adsorption) used to characterize the comparative adsorption performances of a gas mixture, the shape of the curve can be explained by diffusion processes. The aim of this chapter is to explore this frequently overlooked diffusion parameter in an adsorption-based Xe/Kr separation process.
 
 \begin{figure}[ht]
   \centering
@@ -30,17 +30,17 @@ To gain a better understanding of the Brownian motion of suspended particles in 
 \begin{equation}\label{eq:einstein}
   \langle {r(t)}^2 \rangle = 2dD\e{diff}t = 6D\e{diff}t
 \end{equation}
-where  $d$ is the dimension of the space in which the particle diffuses ($d=3$ in a volume) and $r(t)$ is the displacement of a particle from the time $0$ to $t$. The brackets represent the average over all independent trajectories (different particles and different time origins). This equation can be generalized to the diffusion of an adsorbate in the adsorbed phase, which describes the ease of particle movement within a nanoporous material. A low diffusion coefficient indicates limited access to the structure's pores, as illustrated in Figure~\ref{fgr:intro_diffusion}
+where  $d$ is the dimension of the space in which the particle diffuses ($d=3$ in a volume) and $r(t)$ is the displacement of a particle from the time $0$ to $t$. The brackets represent the average over all independent trajectories (different particles and different time origins). This equation can be generalized to the diffusion of an adsorbate in the adsorbed phase, which describes the ease of particle movement within a nanoporous material. A low diffusion coefficient indicates limited access to the structure's pores, as illustrated in Figure~\ref{fgr:intro_diffusion}. It is worth mentioning that in porous media, non-Fickian diffusion processes can occur, the MSD has a linear relation to time. For example, when particles are confined in a one-dimensional channel that does not allow a particle to jump over another, the dynamics is described by a single file diffusion equation, and the MSD has square root relation to time.\autocite{Levitt_1973}
 
-To model the diffusion coefficient of xenon and krypton inside a nanoporous material, molecular simulations of the adsorbate displacements will be utilized. Although alternative approaches such as the Green-Kubo equation exist, the comparatively less complex Einstein law is preferred for self-diffusion calculations, as demonstrated by this cited comparative study~\cite{Maginn_2020}. This section will focus on various simulation techniques that can be used for evaluating diffusion in high-throughput screenings. Different methods of assessing the MSD of diffusing particles will be presented, starting from the straightforward approach of molecular dynamics to faster methodologies more suitable for screenings, such as machine-learned surrogate models and kinetic Monte Carlo simulations.
+To model the diffusion coefficient of xenon and krypton inside nanoporous materials, molecular simulations of the adsorbate displacements will be utilized. Although alternative approaches such as the Green-Kubo equation exist, the comparatively less complex Einstein law is preferred for self-diffusion calculations, as demonstrated by this cited comparative study~\cite{Maginn_2020}. This section will focus on various simulation techniques that can be used for evaluating diffusion in high-throughput screenings. Different methods of assessing the MSD of diffusing particles will be presented, starting from the straightforward approach of molecular dynamics to faster methodologies more suitable for screenings, such as machine-learned surrogate models and kinetic Monte Carlo simulations.
 
 \subsection{Molecular dynamics}
 
-Molecular dynamics are used to simulate the motion of molecules in a given system and to calculate thermodynamic averaging by assuming the equivalence between time averaging and ensemble averaging (ergodic hypothesis). In other system configurations, mechanical properties, thermodynamic properties, or chemical properties can be determined. However, the focus here is on calculating diffusion coefficients of monoatomic molecules, with the discussion centered around averaging trajectories to obtain MSD values.
+Molecular dynamics (MD) simulations are used to reproduce the microscopic motion of molecules in a given system and to calculate thermodynamic averages by assuming the equivalence between time averaging and ensemble averaging (ergodic hypothesis). For other applications, mechanical properties, thermodynamic properties, or chemical properties can also be determined. However, the main focus here is on calculating diffusion coefficients of monoatomic molecules, with the discussion centered around averaging trajectories to obtain MSD values.
 
 \subsubsection{Simulation details}
 
-Molecular dynamics (MD) aims at describing the motion of particles, subjected to forces exerted by surrounding particles. This process can be viewed as a complex integration of the Newton's law of motion. A particle $i$ of position $\mathbf{r}_i$ and mass $m_i$ subjected to a force $\mathbf{F}_i$ resulting from the cumulated interactions with its surroundings is accelerated according to this equation:
+Molecular dynamics aims at describing the motion of particles, subjected to forces exerted by surrounding particles. This process can be viewed as a step-by-step integration of the Newton's law of motion. A particle $i$ of position $\mathbf{r}_i$ and mass $m_i$ subjected to a force $\mathbf{F}_i$ resulting from the cumulated interactions with its surroundings is accelerated according to this equation:
 \begin{equation}\label{eq:newton}
   m_i\frac{\dd^2 \mathbf{r}_i}{{\dd t}^2} = \mathbf{F}_i
 \end{equation}
@@ -51,22 +51,22 @@ In classical modeling, forces are determined using the aptly named forcefield th
 \end{equation}
 where $\epsilon_{ij}$ and $\sigma_{ij}$ are the LJ parameters of the atom pair $ij$. The resulting force is obtained by summing the forces $\mathbf{F}_i=\sum_{j}\mathbf{f}_{ij}$ exerted by the surrounding atoms $j$. To reduce the computation time required, molecular simulations consider only the atoms within a specified cutoff radius.
 
-Now that the force $\mathbf{F}_i$ has been defined,  the molecule can be set in motion by integrating equation~\ref{eq:newton} from time $t$ to time $t+\delta t$. Various methods exist to integrate equations of motion, such as the Euler or velocity-Verlet scheme presented in the book by Frenkel et al.\autocite{frenkel2001md} In this work, the focus will be on the \emph{leap frog} integration implemented in the RASPA2\autocite{dubbeldam2016} software, which was used for the simulations. The position $\mathbf{r}_i$ and velocity $\dot{\mathbf{r}}_i$ are updated at each time step $\delta t$ using the following equations:
+Now that the force $\mathbf{F}_i$ has been defined, the molecule can be set in motion by numerically integrating equation~\ref{eq:newton} from time $t$ to time $t+\delta t$. Various methods exist to integrate equations of motion, such as the Euler or velocity-Verlet scheme presented in the book by Frenkel et al.\autocite{frenkel2001md} In this work, the focus will be on the \emph{leap frog} integration implemented in the RASPA2\autocite{dubbeldam2016} software used for the MD simulations. The position $\mathbf{r}_i$ and velocity $\dot{\mathbf{r}}_i$ are updated at each time step $\delta t$ using the following equations:
 \begin{equation}\label{eq:frogleap_integration}
   \begin{split}
     \dot{\mathbf{r}}_i\left(t+\tfrac{1}{2}\delta t\right) & = \dot{\mathbf{r}}_i\left(t-\tfrac{1}{2}\delta t\right) + \tfrac{1}{m_i}\mathbf{f}_i \\
     \mathbf{r}_i\left(t+\delta t\right) & = \mathbf{r}_i\left(t\right) + \dot{\mathbf{r}}_i\left(t+\tfrac{1}{2}\delta t\right)\delta t
   \end{split}
 \end{equation}
-From the initial conditions $(\mathbf{r}_i(0),\dot{\mathbf{r}}_i(0.5\delta t))$, the center of mass of molecule $i$ can be translated to any position $\mathbf{r}_i(t_n=n*\delta t)$. The rotation step required for polyatomic molecules will be omitted since the study focuses solely on monoatomic noble gases. The different positions ${\left\{\left(t_n,\mathbf{r}_i(t_n)\right)\right\}}_{n=0,\ldots,N\e{tot}}$ constitute the total trajectory of the MD simulation (velocities are not mentioned for simplicity). This total trajectory can be used to derive the average MSD, which can be further analyzed to calculate the diffusion coefficient.
+From the initial conditions $(\mathbf{r}_i(0),\dot{\mathbf{r}}_i(0.5\delta t))$, the center of mass of molecule $i$ can be translated to any position $\mathbf{r}_i(t_n=n*\delta t)$. The rotation step required for polyatomic molecules will be omitted since the study focuses solely on monoatomic noble gases. The different positions ${\left\{\left(t_n,\mathbf{r}_i(t_n)\right)\right\}}_{n=0,\ldots,N\e{tot}}$ constitute the total trajectory of the MD simulation (velocities are not mentioned for readability, but they are also propagated). This total trajectory can be used to derive the average MSD, which can be further analyzed to calculate the diffusion coefficient.
 
 \subsubsection{Diffusivity calculation using an MD trajectory}
 
-The MSD sampling technique implemented in RASPA2\autocite{dubbeldam2016}, presented in an article~\cite{Dubbeldam_2009} by a few authors of the adsorption simulation software, was employed. The approach is based on a modified version of the order-$\mathbf{n}$ algorithm described in the book~\cite{frenkel2001msd} by Frenkel and Smit. The focus in this chapter will be on the multiple-window algorithm used to calculate the diffusion coefficients of xenon and krypton.
+The MSD sampling technique implemented in RASPA2\autocite{dubbeldam2016}, presented in an article~\cite{Dubbeldam_2009} by several authors of the adsorption simulation software, was employed. The approach is based on a modified version of the order-$\mathbf{n}$ algorithm described in the book~\cite{frenkel2001msd} by Frenkel and Smit. The focus in this chapter will be on the multiple-window algorithm used to calculate the diffusion coefficients of xenon and krypton.
 
-To understand this computation, it is necessary to first explain what the window algorithm does and how it can be generalized to the multiple-window algorithm. First, consider a single MD trajectory of duration $t\e{tot}=N\e{tot}\delta t$. This trajectory can be used to generate displacement of any size $\tau$. A straightforward approach would be to compute the square displacement ${\lVert\mathbf{r}_i(\tau)-\mathbf{r}_i(0)\rVert}^2$ for a sub-trajectory $\mathcal{T}(0\rightarrow\tau)$ of duration $\tau$. However, this alone is insufficient to obtain a statistically meaningful average of the MSD, as described by the Einstein equation\ref{eq:einstein}. By assuming independence between two movements of the same particle separated by a time $\delta t$, as hypothesized in Einstein's paper~\cite{einstein1905motion}, shifting the origin of time by $\delta t$ would yield another trajectory. This process can be repeated $i$ times while $\tau + i\delta t\leq t\e{tot}$. Although highly accurate, this approach is highly inefficient when $\tau \gg \delta t$ since two consecutive sub-trajectories $\mathcal{T}(i\delta t\rightarrow\tau+i\delta t)$ and $\mathcal{T}((i+1)\delta t\rightarrow\tau+(i+1)\delta t)$ would be very similar. 
+To understand this computation, it is necessary to first explain what the window algorithm does and how it can be generalized to the multiple-window algorithm. First, consider a single MD trajectory of duration $t\e{tot}=N\e{tot}\delta t$. This trajectory can be used to generate displacement of any size $\tau$. A straightforward approach would be to compute the square displacement ${\lVert\mathbf{r}_i(\tau)-\mathbf{r}_i(0)\rVert}^2$ for a sub-trajectory $\mathcal{T}(0\rightarrow\tau)$ of duration $\tau$. However, this alone is insufficient to obtain a statistically meaningful average of the MSD, as described by the Einstein equation~\ref{eq:einstein}. By assuming independence between two movements of the same particle separated by a time $\delta t$, as hypothesized in Einstein's paper~\cite{einstein1905motion}, shifting the origin of time by $\delta t$ would yield another trajectory. This process can be repeated $i$ times while $\tau + i\delta t\leq t\e{tot}$. Although highly accurate, this approach is highly inefficient when $\tau \gg \delta t$ since two consecutive sub-trajectories $\mathcal{T}(i\delta t\rightarrow\tau+i\delta t)$ and $\mathcal{T}((i+1)\delta t\rightarrow\tau+(i+1)\delta t)$ would be very similar. 
 
-To efficiently sample the trajectory into independent sub-trajectories, a sampling time step of $\delta \tau\lesssim\tau$, on the same order of magnitude as $\tau$, can be employed. To achieve this, the window approach first defines a value $\delta \tau$ and generates $N_{\tau} = \lfloor(t\e{t ot} -\tau)/ \delta\tau \rfloor$ different sub-trajectories $\left\{\mathcal{T}(0\rightarrow\tau), \mathcal{T}(\delta\tau\rightarrow\tau + \delta\tau), \ldots, \mathcal{T}(N_{\tau}\delta\tau\rightarrow\tau + N_{\tau}\delta\tau)\right\}$ of duration $\tau=k\delta\tau$, where $k$ is an integer ranging from $1$ to $K$ that defines the time window to be sampled. This allows the calculation of the MSD $\langle {r(\tau)}^2 \rangle$ for duration values of $\tau$ equal to $\delta\tau, \ldots, K\delta\tau$. The relation $\langle {r(\tau)}^2 \rangle$ is linear, it can then be fitted to equation~\ref{eq:einstein} to obtain the diffusion coefficient. The trajectory generation using the window approach is illustrated in Figure~\ref{fgr:window_msd} for a decomposition into sub-trajectories of a duration $\tau=3\delta\tau$ shifted by $\delta\tau$.
+To efficiently sample the trajectory into independent sub-trajectories, a sampling time step of $\delta \tau\lesssim\tau$, on the same order of magnitude as $\tau$, can be employed. To achieve this, the window approach first defines a value $\delta \tau$ and generates $N_{\tau} = \lfloor(t\e{t ot} -\tau)/ \delta\tau \rfloor$ different sub-trajectories $\left\{\mathcal{T}(0\rightarrow\tau), \mathcal{T}(\delta\tau\rightarrow\tau + \delta\tau), \ldots, \mathcal{T}(N_{\tau}\delta\tau\rightarrow\tau + N_{\tau}\delta\tau)\right\}$ of duration $\tau=k\delta\tau$, where $k$ is an integer ranging from $1$ to $K$ that defines the time window to be sampled. This allows the calculation of the MSD $\langle {r(\tau)}^2 \rangle$ for duration values of $\tau$ equal to $\delta\tau, \ldots, K\delta\tau$. The resulting MSD $\langle {r(\tau)}^2 \rangle$ is linear with respect to time, it can then be fitted to equation~\ref{eq:einstein} to obtain the diffusion coefficient. The trajectory generation using the window approach is illustrated in Figure~\ref{fgr:window_msd} for a decomposition into sub-trajectories of a duration $\tau=3\delta\tau$ shifted by $\delta\tau$.
 
 \begin{figure}[ht]
   \centering
@@ -76,19 +76,19 @@ To efficiently sample the trajectory into independent sub-trajectories, a sampli
 
 The major drawback of this method is that a timescale $\left\{\delta\tau, \ldots, K\delta\tau\right\}$ needs to be defined in advance. To access the different timescales within a single simulation, the multiple-window algorithm developed by Dubbeldam et al.\ and implemented in the RASPA2 software for calculating mean squared displacements (MSD) in molecular dynamics simulations is employed.
 
-The different time windows are recursively defined using the default parameters of RASPA2. The first time window is defined by $K=25$ displacements with durations $\delta t, 2\delta t, \ldots,(K-1)\delta t$ and a shift of $\delta t$ (the default shift value $\delta t$ of the first window can be modified using the parameter ``SampleMSDEvery''). The second window is then based on a sampling time $\delta \tau_1 = K\delta t$, and the sub-trajectories have durations $\left(\tau_1^{(1)} = \delta\tau_1\right),\ldots,\left(\tau_1^{(K-1)} = (K-1)\delta\tau_1\right)$. This recursive process is repeated, where the $i$\e{th} window has a sampling time of $\delta \tau_i = K^i\delta t$ and sub-trajectories with durations $\left(\tau_i^{(1)} = \delta\tau_i\right),\ldots,\left(\tau_i^{(K-1)} = (K-1)\delta\tau_i\right)$. A window algorithm similar to the one described above is applied to each window. The algorithm terminates when no further window can be generated, i.e., when $\tau_n^{(k)}>t\e{tot}$ where $n$ is the index of the window and $k$ is the index in the single-window algorithm that defines the desired sampling time with respect to $\delta\tau_i$. The timescale $\delta \tau_i = K^i\delta t$ sampled follows a geometric progression, allowing access to very different timescales. This enables the identification of the timescale corresponding to the diffusion regime (linear relationship between the MSD and the duration of the sub-trajectories used in the averaging). The different timescales and the exponent value $b$ from fitting a function of the form $x \mapsto ax^b$ for the different time windows are illustrated in Figure~\ref{fgr:MSD_init} --- values of $b$ close to $1$ can be associated with a diffusion regime. The determination of the diffusion coefficient is then simplified to a simple fitting problem, which will be further explained in the presentation of the diffusion coefficient screening in section~\ref{sct:md_screening}.
+The different time windows are recursively defined using the default parameters of RASPA2. The first time window is defined by $K=25$ displacements with durations $\delta t, 2\delta t, \ldots,(K-1)\delta t$ and a shift of $\delta t$ (the default shift value $\delta t$ of the first window can be modified using the parameter ``SampleMSDEvery''). The second window is then based on a sampling time $\delta \tau_1 = K\delta t$, and the sub-trajectories have durations $(\tau_1^{(1)} = \delta\tau_1\right),\ldots,\left(\tau_1^{(K-1)} = (K-1)\delta\tau_1\right)$. This recursive process is repeated, where the $i$\e{th} window has a sampling time of $\delta \tau_i = K^i\delta t$ and sub-trajectories with durations $\left(\tau_i^{(1)} = \delta\tau_i\right),\ldots,\left(\tau_i^{(K-1)} = (K-1)\delta\tau_i\right)$. A window algorithm similar to the one described above is applied to each window. The algorithm terminates when no further window can be generated, i.e., when $\tau_n^{(k)}>t\e{tot}$ where $n$ is the index of the window and $k$ is the index in the single-window algorithm that defines the desired sampling time with respect to $\delta\tau_i$. The timescale $\delta \tau_i = K^i\delta t$ sampled follows a geometric progression, allowing access to very different timescales. This enables the identification of the timescale corresponding to the diffusion regime (linear relationship between the MSD and the duration of the sub-trajectories used in the averaging). The different timescales and the exponent value $b$ from fitting a function of the form $x \mapsto ax^b$ for the different time windows are illustrated in the next section (Figure~\ref{fgr:MSD_init}) --- values of $b$ close to $1$ can be associated with a diffusion regime. The determination of the diffusion coefficient is then simplified to a simple fitting problem, which will be further explained in the presentation of the diffusion coefficient screening in section~\ref{sct:md_screening}.
 
-This methodology can then be replicated to thousands of structures to characterize the diffusion properties of these materials. Numerous screenings have already been conducted in the literature, as presented in Chapter 1, specifically in the section dedicated to transport property screenings. The prediction of these quantities using machine learning will now be explored in more detail.
+This methodology can then be replicated to thousands of structures to characterize the diffusion properties of these materials. Numerous screenings have already been conducted in the literature, as presented in Chapter 1, specifically in the section dedicated to transport property. The prediction of these quantities using machine learning will now be explored in more detail.
 
 \subsubsection{ML modeling}
 
-In a very recent study, Daglar et al.\ used an ML model to predict the diffusion coefficient of 100 thousand hypothetical MOFs by utilizing data on around 5000 CoRE MOF structures.\autocite{Daglar_2022} Alongside conventional geometrical descriptors, they employed chemical composition descriptors and the heat of adsorption as the input features of their machine learning model to predict the diffusion coefficients of \ce{H2}, \ce{CH4}, \ce{N2} and \ce{He} within various MOF materials from CoRE MOF 2019 (training) and hMOF (testing). The combination of kinetic and thermodynamic data for the characterization of MOF materials is an intriguing approach. However, a key limitation of most existing approaches in the literature is the lack of structure--property relationship that elucidates the underlying microscopic origins of diffusion coefficient values.
+In a very recent study, Daglar et al.\ used an ML model to predict the diffusion coefficient of 100,000 hypothetical MOFs by utilizing data on around 5,000 CoRE MOF structures.\autocite{Daglar_2022} Alongside conventional geometrical descriptors, they employed chemical composition descriptors and the heat of adsorption as the input features of their machine learning model to predict the diffusion coefficients of \ce{H2}, \ce{CH4}, \ce{N2} and \ce{He} within various MOF materials from CoRE MOF 2019 (training dataset) and hMOF (testing dataset). The combination of kinetic and thermodynamic data for the characterization of MOF materials is an intriguing approach. However, a key limitation of most existing approaches in the literature is the lack of structure--property relationship that elucidates the underlying microscopic origins of diffusion coefficient values.
 
-Following a similar approach to the thermodynamic screening (Chapters 2--4), the present work on transport property screening aims to establish structure-property relationships between diffusion coefficients and geometric descriptors of MOF structures. To gain deeper insights into the diffusion process, the diffusion activation energy will be evaluated using energy grid-based methods described in the literature. These techniques are designed to enhance the prediction of diffusion coefficients, either through direct calculations or by employing ML surrogate models. To this end, the kinetic Monte Carlo approach will be introduced, which, although less accurate than the MD approach, offers significantly higher computational efficiency.
+Following a similar approach to the thermodynamic screening (Chapters~2--4), the present work on transport property screening aims to establish structure-property relationships between diffusion coefficients and geometric descriptors of MOF structures. To gain deeper insights into the diffusion process, the diffusion activation energy will be evaluated using energy grid-based methods described in the literature. These techniques are designed to enhance the prediction of diffusion coefficients, either through direct calculations or by employing ML surrogate models. To this end, kinetic Monte Carlo approach will be introduced, which, although less accurate than the MD approach, offers significantly higher computational efficiency.
 
 \subsection{Lattice kinetic Monte Carlo}
 
-The lattice kinetic Monte Carlo method relies on a predefined lattice of stable points corresponding to adsorption sites. Each site is connected to another if there exists a diffusion path (narrow channel) between them. To calculate the probability of transition from one site to another, a transition state (TS) within the narrow channel corresponding to the highest energy point along the minimal energy diffusion path (the saddle point), must be defined. The transition probability is defined based on the energy barrier that must be overcome to traverse the channel. Once the lattice is established, the adsorbate can be propagated from one site to another using the different transition probabilities. Although this approach yields a coarse-grained trajectory compared to the one obtained through MD simulations, it is sufficient for computing the MSD and the diffusion coefficient.
+The lattice kinetic Monte Carlo method relies on a predefined lattice of stable points corresponding to adsorption sites. Each site is connected to another if there exists a diffusion path (narrow channel) between them. To calculate the probability of transition from one site to another, a transition state (TS) within the narrow channel corresponding to the highest energy point along the minimal energy diffusion path (the saddle point), must be defined. In the transition state therory, the transition probability is defined based on the energy barrier that must be overcome to traverse the channel. Once the lattice is established, the adsorbate can be propagated from one site to another using the different transition probabilities. Although this approach yields a coarse-grained trajectory compared to the one obtained through MD simulations, it is sufficient for computing the MSD and the diffusion coefficient.
 
 
 \begin{figure}[ht]
@@ -99,13 +99,13 @@ The lattice kinetic Monte Carlo method relies on a predefined lattice of stable 
 
 \subsubsection{Transition state theory for diffusion}
 
-In chemistry, the kinetics of a reaction are often explained using transition state theory. This theory compares the energy of the reactants before the reaction to the energy of the transition state, allowing for the calculation of the reaction rate. Along a reaction path, this rate is proportional to the ratio between the Boltzmann factor at the transition state and the integration of Boltzmann factors along the reaction path.
+In chemistry, the kinetics of a reaction are often explained using transition state theory. This theory compares the energy of the reactants to that of the transition state, allowing for the calculation of the reaction rate. Along a reaction path, this rate is proportional to the ratio between the Boltzmann factor at the transition state and the integration of Boltzmann factors along the reaction path.
 
 This definition can be directly transposed to the case of a diffusion path instead of a reaction path. Thus, the diffusion rate $\mathcal{R}_{0\rightarrow 1}$ from site $0$ to $1$ can be defined as follows:
 \begin{equation}\label{eq:trans_rate_path}
   \mathcal{R}_{0\rightarrow 1} = \kappa\sqrt{\frac{k\e{B}T}{2\pi m}}\frac{e^{-\beta E(\mathbf{r}\ex{TS})/k\e{B}T}}{\int\e{path}e^{-\beta E(\mathbf{r})/k\e{B}T}\dd\mathbf{r}}
 \end{equation}
-where $\kappa$ is the Bennet-Chandler dynamic correction factor,\autocite{BENNETT1977} and $\kappa=\tfrac{1}{2}$ if it is equiprobable to reach both sites from the transition state. This requires the determination of the optimal diffusion path before determining the diffusion rate. Wang et al. (2022) adopted this approach in their noble gas separation screening, where they first determined the minimal energy path before calculating diffusion rates.\autocite{Wang_2022}
+$\kappa$ is the Bennet-Chandler dynamic correction factor (or recrossing probability),\autocite{BENNETT1977} and $\kappa=\tfrac{1}{2}$ if it is equiprobable to reach both sites from the transition state. This requires the determination of the optimal diffusion path before determining the diffusion rate. Wang et al. (2022) adopted this approach in their noble gas separation screening, where they first determined the minimal energy path before calculating diffusion rates.\autocite{Wang_2022}
 
 Another approach involves determining a transition surface through which the adsorbate passes to diffuse along the channel of the material. In this case, only the determination of the transition only, but it relies on another definition of the transition rate $\mathcal{R}_{0\rightarrow 1}$:
 \begin{equation}\label{eq:trans_rate}
@@ -115,7 +115,7 @@ where the integration for the transition state is performed on a bottleneck surf
 
 \subsubsection{TuTraST algorithm for kinetic MC}\label{sct:tutrast}
 
-In this section, the focus shifts to the second approach, which relies on the determination of a transition state as a surface. This approach was developed by Mace et al.\autocite{Mace_2019}\ and involves detecting merging points between basins that represent the adsorption pores. The algorithm developed for this purpose is known as TuTraST,  which stands for Tunnels and Transition States. It is a search algorithm that aims to identify the tunnels and transition states that separate different adsorption ``basins'' within them. Once the adsorption sites, transition states, and connecting tunnels are identified, hopping rates between stable adsorption sites can be calculated using Equation~\ref{eq:trans_rate}. Finally, a lattice kinetic Monte Carlo simulation can be employed to move particles within a simplified hopping diffusion system to determine the MSD and, ultimately, the diffusion coefficient.
+In this section, the focus shifts to the second approach, which relies on the determination of a transition state as a surface. This approach was developed by Mace et al.\autocite{Mace_2019}\ and involves detecting merging points between basins that represent the adsorption sites. The algorithm developed for this purpose is known as TuTraST,  which stands for Tunnels and Transition States. It is a search algorithm that aims to identify the tunnels and transition states that separate different adsorption ``basins'' within them. Once the adsorption sites, transition states, and connecting tunnels are identified, hopping rates between stable adsorption sites can be calculated using Equation~\ref{eq:trans_rate}. Finally, a lattice kinetic Monte Carlo simulation can be employed to move particles within a simplified hopping diffusion system to determine the MSD and, ultimately, the diffusion coefficient.
 
 \begin{figure}[ht]
   \centering
@@ -123,6 +123,7 @@ In this section, the focus shifts to the second approach, which relies on the de
     \caption{ Illustration of the cluster growth and the identification of boundary points in the TuTraST algorithm\autocite{Mace_2019}. The clusters are grown from left to right and top to bottom. A tunnel is detected when the points are connected all the way from one periodic boundary to another (red). The boundary points assigned to the TS surface are indicated in yellow. Reprinted with permission from the original paper~\cite{Mace_2019} copyright \copyright\ 2019 American Chemical Society. }\label{fgr:tutrast}
 \end{figure}
 
+\todo{HERE}
 In practice, the calculation of an energy grid that detects all the different components of the lattice is required. The algorithm iterates over different energy values from $E\e{min}+\delta E, \ldots, E\e{min}+N\delta E$, such that the maximum energy is below a predetermined energy cutoff $E\e{min}+N\delta E<E\e{cutoff}$. At the initial step, the clusters of grid points with an energy below $E\e{min}+\delta E$ are naturally formed based on their connectivity. Then, at iteration level $L$, the clusters found in the previous iteration $L-1$ are grown layer by layer (one layer corresponds to the immediate neighbors on the grid), as shown in Figure~\ref{fgr:tutrast}. If a layer touches another cluster, a boundary point is identified --- it is only accepted if the energy difference between minimum energy of the two touching basins and the boundary point value is sufficiently high. If the barrier is negligible, the basins are merged. At the end of the process, the boundary values are clustered and assigned as the transition surface between different pairs of adsorption basins. If the points of the basins and boundary surfaces are connected all the way through, a tunnel can be defined for diffusion to occur. After a sufficient number of iterations, tunnels with different basins separated by transition state surfaces are established. A kinetic Monte Carlo simulation can then be performed to determine the diffusion coefficient within each tunnel. The diffusion coefficient in the material corresponds to a weighted average of the diffusion coefficients in each tunnel, with the weight determined by the probability of presence in each tunnel, which corresponds to the sum of the Boltzmann factors (proportional to the Henry coefficient in a given tunnel).
 
 This approach is very promising as it is significantly more efficient than MD simulation-based techniques. The implemented code in Matlab (although not computationally very efficient) already outperforms most MD simulations for diffusion coefficient calculation, with minimal compromise in accuracy, as demonstrated in the diffusion coefficient screening of zeolites. To enhance efficiency further, the algorithm for efficient search of transition states was rewritten in C++. At this stage of development, the focus was on determining the diffusion activation energy, which is independent of transition state detection. Detailed algorithmic information for determining the diffusion activation energy in nanoporous materials using the in-house algorithm is provided in section~\ref{sct:algo_diff}, along with the projected development of a faster lattice kinetic Monte Carlo simulation inspired by the TuTraST algorithm.
@@ -148,7 +149,7 @@ where $v_m$ is the average velocity of a particle, following the Maxwell-Boltzma
   \centering
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/MSD_anomalous_diffusion.pdf}
     \includegraphics[width=0.48\textwidth]{figures/5-diffusion/MSD_Xe_KAXQIL_clean.pdf}
-    \caption{Left: Different regimes that could be observed in an MSD plot as a function of time. The ballistic regime can be considered super-diffusional, while the normal diffusion follows a linear relation described by the Einstein equation\ref{eq:einstein}. The sub-diffusion regime commonly occurs in obstructed media such as nanoporous materials. The different regimes can be observed in the right plot of the actual MSD, which is calculated using the multiple-window method. Fittings are performed using a generic function $K_\alpha\tau^\alpha$, and the exponents $\alpha$ are provided in the legend. }\label{fgr:MSD_init}
+    \caption{Left: Different regimes that could be observed in an MSD plot as a function of time. The ballistic regime can be considered super-diffusional, while the normal diffusion follows a linear relation described by the Einstein equation~\ref{eq:einstein}. The sub-diffusion regime commonly occurs in obstructed media such as nanoporous materials. The different regimes can be observed in the right plot of the actual MSD, which is calculated using the multiple-window method. Fittings are performed using a generic function $K_\alpha\tau^\alpha$, and the exponents $\alpha$ are provided in the legend. }\label{fgr:MSD_init}
 \end{figure}
 
 A transition from the ballistic regime to the pseudo-diffusional regime (where the exponent has not yet reached 1) is observed in the plot in cyan. Between \SI{1}{\ps} and \SI{100}{\ps}, a sub-diffusion regime is observed, characterized by an MSD that follows a power function of time, $\langle {r(\tau)}^2 \rangle=K_\alpha\tau^\alpha$, with an exponent less than $1$, as illustrated in the left plot of Figure~\ref{fgr:MSD_init}. This regime corresponds to the confinement of xenon particles within adsorption pores, where only thermal vibration occurs, and no diffusion hopping is observed at this timescale. Diffusion appears to begin at the \SI{10}{\ns} timescale. The MSD between \SI{0.01}{\ns} and \SI{0.4}{\ns}, as shown in Figure~\ref{fgr:MSD_linear_init}, represents a sub-diffusional regime due to the confinement imposed by the nanopores of \texttt{KAXQIL}. However, at \SI{0.4}{\ns}--\SI{9}{\ns}, the MSD starts to exhibit an exponent closer to $1$, allowing for a linear fit, albeit imperfect. Ideally, trajectory sampling on the order of tens of nanoseconds would be desirable for the next timescale. However, with an MD time step of \SI{1}{\fs}, this would multiply the computation time by at least 5 (1--2 weeks for one MD simulation), which becomes prohibitive.
