--- a/thesis.bib
+++ b/thesis.bib
@@ -4017,3 +4017,16 @@ URL = {https://doi.org/10.1137/0216006},
 	title = {From Random Walk to Single-File Diffusion},
 	journal = {Phys. Rev. Lett.}
 }
+@article{Levitt_1973,
+	doi = {10.1103/physreva.8.3050},
+	url = {https://doi.org/10.1103%2Fphysreva.8.3050},
+	year = 1973,
+	month = {dec},
+	publisher = {American Physical Society ({APS})},
+	volume = {8},
+	number = {6},
+	pages = {3050--3054},
+	author = {David G. Levitt},
+	title = {Dynamics of a Single-File Pore: Non-Fickian Behavior},
+	journal = {Phys. Rev. A}
+}
